--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         .title {
             color: white;
             background-color: crimson;
+            width: 180px;
             font-size: 24px;
+            text-align: center;
             padding: 6px 18px;
             border-radius: 8px;
             position: relative;
