--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             color: #222;
         }
         .pop{
+            color: #222;
             position: absolute;
             top: 0;
             left: 0;
