--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
         .pop p{
             margin: 0;
             color: #222;
+            font-size: 14px;
         }
         .pop{
             color: #222;
+            font-size: 14px;
             position: absolute;
             top: 0;
             left: 0;
@@ -130,9 +132,6 @@
             display: none;
             justify-content: center;
             flex-direction: column;
-        }
-        .up{
-            display: block;
         }
         /*
         깃허브 배포
